# spotter-solution

./: .env.dist  .flake8  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/management/commands/: load_fuel_prices.py
api/migrations/: 0001_initial.py  0002_fuelstation_truckstop_id.py  0003_fuelstation_api_fuelsta_locatio_c6f98d_idx.py
api/services/: __init__.py  base_services.py  folium_map_plotter.py  greedy_route_optimizer.py  spotter_fuel_station_repository.py  spotter_geocoding_service.py  standard_fuel_calculator.py
api/templates/: route_map.html
api/tests/: conftest.py  test_commands.py  test_services.py  test_views.py
spotter/: asgi.py  settings.py  wsgi.py
